--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VsDox | Enterprise Document Management System</title>
+  <title>VSDox | Enterprise Document Management System</title>
   <link rel="icon" type="image/png" sizes="32x32" href="./src/favicon-32x32.png">
   <meta name="description"
-    content="VsDox is a premium AI-powered Document Management System for secure, scalable, and efficient enterprise content management." />
+    content="VSDox is a premium AI-powered Document Management System for secure, scalable, and efficient enterprise content management." />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 
